Aufgaben selbst fehlen noch

--- a/Uebung10Template.tex
+++ b/Uebung10Template.tex
@@ -49,6 +49,18 @@ Die wahre Anomalie ist berechenbar aus der \textbf{exzentrischen Anomalie E} (Wi
 \[
 \phi = \underbrace{2\pi - \underbrace{arccos(\frac{cos E-\epsilon}{1-\epsilon cos E})}_{0 \le E \le \pi}}_{\pi \le E \le 2\pi}
 \]
+Die exzentrische Anomalie E ergibt sich aus der analytisch nicht löbaren \emph{Kepler-Gleichung}
 
+\[
+E - \epsilon sin E = 2 \pi \frac{t - t_0}{T}
+\]
+\begin{description}
+\item $T$ -- Bahnperiode
+\item $t_0$ -- Perihelzeit, Zeit des Erreichens des Sonnen-nächsten Punktes
+\end{description}
+
+\section*{Aufgaben}
+Verwenden Sie die in \emph{"`/home/data/Programmierung/Uebung10/kepler\_template.py"'} 
+vorgegebenen Funktionsdeklarationen und das Dictionary mit den Planetendaten als Grundlage für ihr Skript!
 
 \end{document}
