--- a/Uebung10Template.tex
+++ b/Uebung10Template.tex
@@ -6,6 +6,8 @@
 \usepackage{graphicx}        % Einbinden von Bildern
 \usepackage{array}           % vertikale Ausrichtung in Tabellen
 \usepackage{wrapfig}
+\usepackage{hyperref}
+
 
 \parindent 0mm               % kein Einzug am Absatzbeginn
 \pagestyle{empty}            % keine Seitennummer
@@ -62,5 +64,13 @@ E - \epsilon sin E = 2 \pi \frac{t - t_0}{T}
 \section*{Aufgaben}
 Verwenden Sie die in \emph{"`/home/data/Programmierung/Uebung10/kepler\_template.py"'} 
 vorgegebenen Funktionsdeklarationen und das Dictionary mit den Planetendaten als Grundlage für ihr Skript!
+
+\begin{enumerate}
+\item Schreiben Sie eine Funktion, die mit Hilfe des Newtonschen Näherungsverfahrens die exzentrische Anomalie zu beliebigen Zeiten während eines vollständigen Umlaufs (startend im Perihel) für elliptische Bahnen um die Sonne berechnet!
+\item Berechnen Sie in geeigneten Zeitabständen mit Hilfe der exzentrischen Anomalie jeweils die wahre Anomalie und den Abstand des Himmelskörpers von der Sonne für die Erde, Pluto und den Halley\'schen Kometen während eines Umlaufs und stellen Sie diese in \href{http://matplotlib.org/api/pyplot_api.html#matplotlib.pyplot.polar}{Polarkoordinaten} grafisch dar! %Ich weigere mich den Link in diesem IE6 Blau zu machen
+
+
+
+\end{enumerate}
 
 \end{document}
