--- a/Uebung10Template.tex
+++ b/Uebung10Template.tex
@@ -70,7 +70,7 @@ vorgegebenen Funktionsdeklarationen und das Dictionary mit den Planetendaten als
 \item Berechnen Sie in geeigneten Zeitabständen mit Hilfe der exzentrischen Anomalie jeweils die wahre Anomalie und den Abstand des Himmelskörpers von der Sonne für die Erde, Pluto und den Halley\'schen Kometen während eines Umlaufs und stellen Sie diese in \href{http://matplotlib.org/api/pyplot_api.html#matplotlib.pyplot.polar}{Polarkoordinaten} grafisch dar! %Ich weigere mich den Link in diesem IE6 Blau zu machen
 
 \begin{tabular}{|m{1cm}|m{3.5cm}|m{3.5cm}|m{3.5cm}|}\hline
-&Umlaufperiode T& große Halbachse a [AE]&numerische Exzentrizität $\epsilon$\\ \hline
+&Umlaufperiode \newline T& große Halbachse \newline a [AE]&numerische Exzentrizität $\epsilon$\\ \hline
 Erde&365.25 d&1.0&0.0167\\
 Pluto&248 a&39.44&0.25\\
 Halley&76 a&17.94&0.97\\ \hline
